[gd_scene load_steps=2 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
position = Vector2( 160, 90 )
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 336, 180 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
